# madeonsol-rs

./: Cargo.toml  README.md
.github/workflows/: route-parity.yml  rust.yml
examples/: deployer_alerts.rs  kol_feed.rs
src/: client.rs  error.rs  lib.rs  types.rs
src/api/: alpha.rs  coordination_alerts.rs  deployer.rs  kol.rs  me.rs  mod.rs  signals.rs  stream.rs  token.rs  tools.rs  wallet.rs  wallet_tracker.rs  webhooks.rs
