[package]
name = "madeonsol"
version = "0.9.1"
edition = "2021"
rust-version = "1.75"
description = "Official Rust SDK for the MadeOnSol Solana API — KOL wallet tracking, Pump.fun deployer intelligence, and DEX trade firehose. Free tier: 200 req/day at https://madeonsol.com/pricing"
license = "MIT"
repository = "https://github.com/LamboPoewert/madeonsol-rs"
homepage = "https://madeonsol.com/solana-api"
documentation = "https://docs.rs/madeonsol"
readme = "README.md"
keywords = ["solana", "memecoin", "kol", "pumpfun", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "kol_feed"
path = "examples/kol_feed.rs"

[[example]]
name = "deployer_alerts"
path = "examples/deployer_alerts.rs"
